fix table times overflow screen styles

--- a/client/src/styles/components/_Times.scss
+++ b/client/src/styles/components/_Times.scss
@@ -7,3 +7,11 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
 }
+
+.TableTimes{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
